--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,6 +1,6 @@
 [deps]
-CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Changelog = "5217a498-cd5d-4ec6-b8c2-9b85a09b6e3e"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
@@ -15,9 +15,9 @@ TrixiBottomTopography = "86af9953-43df-404b-8eaa-d20d82623a82"
 TrixiShallowWater = "804cb1fc-5b08-4398-a671-a789bfe091b3"
 
 [compat]
-CairoMakie = "0.13"
-Changelog = "1.1"
 CSV = "0.10"
+CairoMakie = "0.13, 0.15"
+Changelog = "1.1"
 DataFrames = "1.7"
 Documenter = "1.3"
 DocumenterInterLinks = "1.0"
